# adserver-prototype

./: .travis.yml  README.md  adserver-prototype.cabal  stack.yaml
src/exe/: adserver-prototype.hs
src/lib/AdServer/: API.hs  Encoding.hs  Identifier.hs  Server.hs
src/test/: adserver-prototype-test.hs
src/test/AdServer/: Test.hs
src/test/AdServer/Encoding/: Test.hs
src/test/AdServer/Identifier/: Test.hs
