name: adserver-prototype
version: 0.1.0.0
homepage: https://github.com/Toxaris/adserver-prototype#readme
license: AllRightsReserved
author: Tillmann Rendel
maintainer: rendel@informatik.uni-tuebingen.de
copyright: 2016 Tillmann Rendel
category: Web
build-type: Simple
cabal-version: >=1.10
synopsis:
  Matching requests against available ads for prototype adserver.
description:
  See README.md

library
  hs-source-dirs: src/main
  default-language: Haskell2010
  exposed-modules:
  build-depends:
    base >= 4.7 && < 5

source-repository head
  type: git
  location: https://github.com/Toxaris/adserver-prototype
