name: adserver-prototype
version: 0.1.0.0
homepage: https://github.com/Toxaris/adserver-prototype#readme
license: AllRightsReserved
author: Tillmann Rendel
maintainer: rendel@informatik.uni-tuebingen.de
copyright: 2016 Tillmann Rendel
category: Web
build-type: Simple
cabal-version: >=1.10
synopsis:
  Matching requests against available ads for prototype adserver.
description:
  See README.md

library
  hs-source-dirs: src/lib
  default-language: Haskell2010
  exposed-modules:
    AdServer.API
    AdServer.Identifier
  build-depends:
    base >= 4.7 && < 5,
    servant >= 0.8.1 && < 0.9,
    text >= 1.2.2.1 && < 1.3

test-suite adserver-prototype-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: src/test
  main-is: adserver-prototype-test.hs
  other-modules:
    AdServer.Test
  build-depends:
    adserver-prototype,
    base >= 4.7 && < 5,
    tasty >= 0.11.0.4 && < 0.12

source-repository head
  type: git
  location: https://github.com/Toxaris/adserver-prototype
